--- a/_posts/2014-04-21-future.md
+++ b/_posts/2014-04-21-future.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-category : lessons
+category : 扯淡
 tagline: "Supporting tagline"
-tags : [机器人, 智能眼镜, 手机, 智能手表]
+tags : [机器人, 智能眼镜]
 ---
 {% include JB/setup %}
 #谁将取代智能手机
@@ -15,9 +15,10 @@ tags : [机器人, 智能眼镜, 手机, 智能手表]
 
 　现在手表被炒的很热，但以目前来看，手表只是一个辅佐设备；注定手表不可能超越智能手机。手表的特点在于屏幕小，便携，查看信息快速直接；但屏幕小也是它的极限性（屏幕扩大了跟智能手机就没差别了），决定了它不适合发展成独立的终端，你能想象拿着手表刷微博看知乎发邮件吗？
 
+<!--break-->
+
 　除非发展出了超越平面显示的信息展现方式，比如说已经被说烂了的“全息投影”。否则手表永远只能是手机的辅佐设备。
 
-<!--break-->
 
 ###**智能眼镜**
 
