修改点文章样式

--- a/_posts/2014-05-10-template.md
+++ b/_posts/2014-05-10-template.md
@@ -11,8 +11,10 @@ tags : [python, django,template]
 
 **在view里面，我们获取了相关的数据，但我们的目的是将数据呈现出来。**
 
+
 于是：
-1.首先我们想到的是直接把数据硬编码到html代码里面，然后通过`HttpResponse`对象传递给浏览器进行渲染：
+
+**1.首先我们想到的是直接把数据硬编码到html代码里面，然后通过`HttpResponse`对象传递给浏览器进行渲染：**
 
 ```
 from django.http import HttpResponse
@@ -23,12 +25,13 @@ def current_datetime(request):
     html = "<html><body>It is now %s.</body></html>" % now
     return HttpResponse(html)
 ```
+<!--break-->
 
 但是很明显这种方法不适合生产环境，你不可能把整个html页面都硬编码在view里面，因为这显得既愚蠢又低效。对于template的改动很明显要比view频繁得多，这种方式意味着你想更改页面表现时都必须得改动python代码，并且前后端无法同步开发。于是有了第二种方式：
 
 
 
-2.把html代码分离成独立的模板，通过加载模板文件进行渲染，这样可以实现前后端分离：
+**2.把html代码分离成独立的模板，通过加载模板文件进行渲染，这样可以实现前后端分离：**
 
 ```
 #view
@@ -48,7 +51,7 @@ def current_datetime(request):
 
 我们知道这样是愚蠢。编程中有一个很重要的思想就是--**最大限度地实现代码重用。** 而我们写100个页面的重复代码可能已经超过40%了，这不但费时费力，你还可能见笑于大方之家。所以我们有一种优雅的解决方式：**include**
 
-(1). 把重用代码分离出来，比如header.html,footer.html,sidebar.html；然后`include`到content.html中。
+**(1). 把重用代码分离出来，比如header.html,footer.html,sidebar.html；然后`include`到content.html中。**
 
 ```
 # hearder.html
@@ -117,7 +120,7 @@ def current_datetime(request):
 这两个页面中`<title>`不同，意味着`<title>`以下的部分都不能并入`header.html`中，哪怕下面仍然存在大量的重复代码。所以有了更优雅的解决办法：**extends** -- inculde的逆向思维。
 
 
-(2). 我们把模板里面的‘不同代码’进行定义，相同的代码保存为base模板
+**(2). 我们把模板里面的‘不同代码’进行定义，相同的代码保存为base模板**
 
 ```
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
