--- a/_posts/2014-05-10-template.md
+++ b/_posts/2014-05-10-template.md
@@ -33,15 +33,18 @@ def current_datetime(request):
 
 **2.把html代码分离成独立的模板，通过加载模板文件进行渲染，这样可以实现前后端分离：**
 
-```
-#view
+
+```python
+   #view
 from django.shortcuts import render_to_response
 import datetime
 
 def current_datetime(request):
     now = datetime.datetime.now()
     return render_to_response('current_datetime.html', {'current_date': now})
+
 ```
+
 
 ```
 #template
@@ -54,7 +57,7 @@ def current_datetime(request):
 **(1). 把重用代码分离出来，比如header.html,footer.html,sidebar.html；然后`include`到content.html中。**
 
 ```
-# hearder.html
+# header.html
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
